* Wed Jul 14 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.2.0
- Added pupmod::master::sysconfig::use_code_cache_flushing to reduce excessive
  memory usage

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.2.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Tue Jun 15 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.2.0
- Changed
  - Converted all `cron` items to `systemd` timers
  - Converted the cleanup jobs to `tmpfiles` jobs
  - Converted from the 'params' patter to module data
- Added
  - Purge puppet logs > 30 days by default
  - Disable puppetserver analytics by default

* Wed May 26 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.3
- Fixed
  - Fixed a bug where the pupmod::master::sysconfig class was not getting applied
- Changed
  - Default pupmod::set_environment to `false` so that users don't accidentally
    end up with systems in the wrong environment

* Tue Jan 12 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.1.3
- Removed EL6 support
- Get `certname` from trusted facts ONLY for authenticated remote requests

* Thu Nov 05 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.2-0
- Default to TLS1.2 only
- Use `certname` by default and fall back to `fqdn` for bolt, etc..

* Fri Oct 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.1.1-0
- Puppet 6.19 has changed the "master" section to "server" in Puppet.settings.
  This fix updates the modules to check puppet_settings[:server] first then
  puppet_settings[:master].

* Tue Sep 22 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.0-0
- Set the default puppetserver ciphers to a safe set

* Fri Sep 11 2020 Adam Yohrling <adam.yohrling@onyxpoint.com> - 8.1.0-0
- Added better auto-tuning support for puppetserver, based on best practices
- Added ReservedCodeCache puppetserver support

* Wed Jul 29 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.0.1-0
- Updated upper bound of inifile.
